# Hackathon_02_qtr04

./: .gitignore  README.md  tmpclaude-a237-cwd
.claude/: settings.local.json
backend/: requirements.txt  taskflow.db
history/: README.md
phase/: .env.docker  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  FINAL_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_STATUS.md  PROJECT_COMPLETE.md  README.md  START_HERE.md  docker-compose.yml  test_default_users.py
phase1/: .gitignore  README.md  demo_advanced_session.txt  demo_session.txt  main.py  pyproject.toml  test_advanced.py
phase3/chatkit/backend/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
phase3/chatkit/backend/src/: database.py  main.py
phase3/chatkit/backend/src/agents/: __init__.py  config.py  context_manager.py  intent_parser.py  mcp_validator.py  orchestrator.py  response_formatter.py  task_manager.py
phase3/chatkit/backend/src/api/: __init__.py  chat.py
phase3/chatkit/backend/src/models/: __init__.py  conversation.py  message.py
phase3/chatkit/backend/src/services/: __init__.py  conversation.py
phase3/chatkit/backend/src/tools/: __init__.py  mcp_tools.py
phase3/phase2/backend/: .env.example  README.md  pyproject.toml  tmpclaude-03a2-cwd
phase3/phase2/backend/src/: database.py  main.py
phase3/phase2/backend/src/api/: auth.py  tasks.py
phase3/phase2/backend/src/middleware/: jwt_auth.py
phase3/phase2/backend/src/models/: notification.py  task.py  user.py
phase3/phase2/backend/src/schemas/: common.py  notification.py  task.py
phase3/phase2/backend/src/services/: auth.py  task_service.py
phase3_chatbot/backend/: .dockerignore  pyproject.toml
phase3_chatbot/backend/src/: config.py  main.py
phase3_chatbot/backend/src/api/: auth.py  notifications.py
phase3_chatbot/backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phase3_chatbot/backend/src/mcp/: __init__.py
phase3_chatbot/backend/src/models/: message.py  task.py  user.py
phase3_chatbot/backend/src/schemas/: auth.py  notification.py
phase3_chatbot/backend/src/services/: auth.py  conversation_service.py  notification.py
phase3_chatbot/backend/tests/: test_chat_api.py  test_mcp_tools.py
(+462 files in other folders)
